[FEAT]backend: add get user
