# backend/src/routes/user.js
@@ -4,6 +4,7 @@ const user = require('../controllers/user.js')
 
 router.post('/login', user.login)
 router.post('/register', user.newUser)
+router.get('/api/user', user.validToken, user.getUser)
 router.get('/api/users', user.validToken, user.getUsers)
 
 module.exports = router
